--- a/app/views/partials/lib/commands/orders/create/build.liquid
+++ b/app/views/partials/lib/commands/orders/create/build.liquid
@@ -9,7 +9,7 @@
 {
   "item_id": "{% print item.id %}",
   "buyer":   "{% print current_user_id %}",
-  "seller":  "{% print item.owner.id %}",
+  "seller":  "{% print item.owner.profile.id %}",
   "total":    {% echo total %}
 }
 {% endparse_json %}
