Group: format event when user joined group

--- a/app/views/partials/theme/simple/activities/feed_unit/header.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/header.liquid
@@ -33,6 +33,8 @@
           {% render 'theme/simple/activities/feed_unit/type/item_created', payload: payload %}
         {% elsif type contains 'comment_created' %}
           {% render 'theme/simple/activities/feed_unit/type/comment_created', payload: payload %}
+        {% elsif type contains 'user_joined_group' %}
+          {% render 'theme/simple/activities/feed_unit/type/user_joined_group', payload: payload %}
         {% endif %}
 
       </p>
