--- a/app/views/partials/lib/commands/photos/create.liquid
+++ b/app/views/partials/lib/commands/photos/create.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function object = 'lib/commands/photos/create/build', object: object
+  function object = 'lib/commands/photos/create/build', object: object, current_user: current_user
   function object = 'lib/commands/photos/create/check', object: object
 
   if object.valid
