--- a/app/views/partials/lib/commands/photos/create/build.liquid
+++ b/app/views/partials/lib/commands/photos/create/build.liquid
@@ -1,7 +1,7 @@
 {% parse_json object %}
   {
     "direct_url":  {{ object.direct_url | json }},
-    "user_id":     {{ context.current_user.id | json }},
+    "user_id":     {{ current_user.id | json }},
     "photo_type":     {{ object.photo_type | json }},
     "object_uuid":   {{ object.object_uuid | json }}
   }
