--- a/app/views/pages/feed/index.liquid
+++ b/app/views/pages/feed/index.liquid
@@ -4,7 +4,8 @@
 
   function list = 'lib/data/queries/activities/search', feed: 'user-private', feed_id: current_user.id, limit: 100
 
-  include 'theme/simple/activities/feed/index', list: list, current_user: current_user
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
+  include 'theme/simple/activities/feed/index', list: list, current_user: current_user, presigned_url: presigned_url
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
 
