--- a/app/views/partials/theme/simple/activities/feed_unit/header.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/header.liquid
@@ -14,7 +14,7 @@
       {% else %}
         {% render 'theme/simple/activities/feed_unit/default_photo' %}
       {% endif %}
-      <p class="ml-2 text-base font-medium">
+      <p class="ml-2 text-base">
         <a href="{{url}}">
           {% print name %}
         </a>
