--- a/app/views/partials/theme/simple/groups/cards.liquid
+++ b/app/views/partials/theme/simple/groups/cards.liquid
@@ -1,3 +1,6 @@
+<h1 class="title-font text-2xl font-medium mb-3">
+  {{ 'app.groups.list' | t }}
+</h1>
 <div class="flex flex-wrap w-full">
   <section class="text-gray-700 body-font">
     <div class="container flex">
