Group: fix design; Fix logout and navigation

--- a/app/views/partials/lib/flash/display.liquid
+++ b/app/views/partials/lib/flash/display.liquid
@@ -7,7 +7,7 @@
     include 'theme/simple/layout/flash', error: flash.error, notice: flash.notice
 
     if context.location.pathname != flash.from
-      session sflash = nil
+      session sflash = null
     endif
   endif
 %}
