--- a/app/views/partials/theme/simple/groups/about.liquid
+++ b/app/views/partials/theme/simple/groups/about.liquid
@@ -25,7 +25,7 @@
     </div>
     <div class="w-1/3 p-5 pt-10 bg-white">
       <h3 class="text-xl">Members ({{list.total_entries}})</h3>
-      <div class="flex">
+      <div class="flex flex-wrap">
         {% for relationship in list.results %}
           {% assign user = relationship.l %}
           {% render 'theme/simple/groups/member_card_small', user: user %}
