--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -19,7 +19,7 @@
           <a href="/admin" class="mr-5 hover:text-gray-900">{{ 'app.admin' | t }}</a>
         {% endif %}
 
-        {% assign profile = context.session.profile | parse_json %}
+        {% assign profile = context.session.profile | default: '{}' | parse_json %}
         {{profile.first_name | default: profile.name}}
         <div x-data="{ dropdownOpen: false }" class="relative ml-2">
           <button @click="dropdownOpen = !dropdownOpen" class="relative z-10 block rounded-md bg-white p-2 focus:outline-none">
