Fix groups on profile; Add main navigation pages

--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -39,4 +39,5 @@ slug: profile
 
   render 'theme/simple/profile/show', section: section, user: profile, list: list, current_user: current_user
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
+  render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
