--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -11,8 +11,10 @@
 
     <nav class="flex flex-wrap items-center justify-center text-base md:ml-auto">
       <a href="/items/new" class="mr-5 hover:text-gray-900">{{ 'app.list-your-item' | t }}</a>
+      <a href="/search" class="mr-5 hover:text-gray-900">{{ 'app.items.list' | t }}</a>
+      <a href="/groups" class="mr-5 hover:text-gray-900">{{ 'app.groups.list' | t }}</a>
 
-      {% if context.current_user.id  %}
+      {% if context.current_user.id %}
         <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.dashboard' | t }}</a>
         {% assign superadmins = context.constants.superadmins | split: ',' %}
         {% if superadmins contains context.current_user.email %}
