--- a/app/views/partials/theme/simple/profile/sections/groups.liquid
+++ b/app/views/partials/theme/simple/profile/sections/groups.liquid
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap w-full">
   <section class="text-gray-700 body-font">
-    <div class="container flex">
+    <div class="container flex flex-wrap">
       {% for record in list.results %}
         {% render 'theme/simple/groups/card', group: record %}
       {% else %}
