home page as landing page

--- a/app/views/pages/admin/activities/index.liquid
+++ b/app/views/pages/admin/activities/index.liquid
@@ -18,6 +18,7 @@
 
   function list = 'lib/data/queries/activities/search', feed: feed_name, feed_id: feed_id, limit: 100
   function users = 'lib/data/queries/profiles/search', limit: 100
+  function groups = 'lib/data/queries/groups/search', limit: 100
 
   function selected = 'lib/data/queries/profiles/find', id: feed_id
 
