--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -2,7 +2,7 @@
 slug: profile
 ---
 {% liquid
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followship: true
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: true
 
   assign template = "/profile/{slug}"
   assign query = context.location.pathname | extract_url_params: template
@@ -34,8 +34,6 @@ slug: profile
   elsif section == 'products'
     function list = 'lib/data/queries/items/search', query: context.params, limit: 20, owner: user.id
   endif
-
-  log list, type: 'showme'
 
   render 'theme/simple/profile/show', section: section, user: profile, list: list, current_user: current_user
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
