--- a/app/views/partials/theme/simple/admin/items/index.liquid
+++ b/app/views/partials/theme/simple/admin/items/index.liquid
@@ -17,9 +17,7 @@
           </a>
         </td>
         <td class="text-left">
-          <a href="/users/{{ record.owner.slug }}">
-            {{ record.owner }}
-          </a>
+          <a href="/users/{{ record.owner.slug }}">{{ record.owner.name }}</a>
         </td>
         <td class="text-left">
           {{ record.category }}
