--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -7,10 +7,19 @@
     </div>
     <select name="feed" class="w-5/6 form-input text-xl">
       <option value="">audit all events</option>
+      <option value="system.1" {% if params.feed == "system.1" %}selected{% endif %}>all</option>
+      <option value="system.2" {% if params.feed == "system.2" %}selected{% endif %}>comments</option>
+
       {% for user in users.results %}
         {% assign feed = "user." | append: user.id %}
         <option value="{{feed}}" {% if params.feed == feed %}selected{% endif %}>user: {{user.name}} (id:{{ user.id }})</option>
       {% endfor %}
+
+      {% for group in groups.results %}
+        {% assign feed = "group." | append: group.id %}
+        <option value="{{feed}}" {% if params.feed == feed %}selected{% endif %}>group: {{group.name}} (id:{{ group.id }})</option>
+      {% endfor %}
+
     </select>
     <input type="submit" class="w-1/6 form-input" value="GO">
   </form>
