--- a/app/views/partials/theme/simple/home/index.liquid
+++ b/app/views/partials/theme/simple/home/index.liquid
@@ -1,4 +1,16 @@
-<form action="/search" name="search">
-  {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
-  {% include 'theme/simple/items/index', items: items %}
-</form>
+{% for feed in feeds %}
+<div class="container mx-auto border p-4">
+  <div class="text-3xl bg-gray-200">
+    {% print feed[0] | t: scope: 'app.home.feeds' %}
+  </div>
+
+  <div class="flex flex-wrap -mx-4 cards">
+    {% for item in feed[1].results %}
+      {% include 'theme/simple/home/card', actor: item.payload.actor, target: item.payload.target, object: item.payload.object %}
+    {% else %}
+      <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+    {% endfor %}
+  </div>
+</div>
+
+{% endfor %}
