--- a/app/views/partials/theme/simple/items/index.liquid
+++ b/app/views/partials/theme/simple/items/index.liquid
@@ -1,9 +1,13 @@
 <div class="container mx-auto">
-  <div class="flex flex-wrap -mx-4 cards">
-    {% for item in items.results %}
-      {% include 'theme/simple/items/card', item: item %}
-    {% else %}
-      <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
-    {% endfor %}
-  </div>
+  <form action="/search" name="search">
+    {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
+
+    <div class="flex flex-wrap -mx-4 cards">
+      {% for item in items.results %}
+        {% include 'theme/simple/items/card', item: item %}
+      {% else %}
+        <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+      {% endfor %}
+    </div>
+  </form>
 </div>
