--- a/app/views/partials/lib/data/queries/activities/model.liquid
+++ b/app/views/partials/lib/data/queries/activities/model.liquid
@@ -24,11 +24,8 @@
 
   hash_assign model['photos'] = ri.models.results
 
-  if model.type == 'profile'
-    hash_assign model['url'] = "/profile/" | append: model.slug
-  elsif model.type == 'item'
-    hash_assign model['url'] = "/items/" | append: model.name | append: '-' | append: model.id | slugify
-  endif
+  function url = 'f_link_to', object: model
+  hash_assign model['url'] = url
 
   return model
 %}
