--- a/app/views/pages/dashboard/groups/create.liquid
+++ b/app/views/pages/dashboard/groups/create.liquid
@@ -8,6 +8,7 @@ method: post
 
   function object = 'lib/commands/groups/create', object: context.params.group, owner_id: current_user.id
   if object.valid
+    include 'lib/commands/events/create', type: 'group_created', actor_id: current_user.id, object_id: object.id
     include 'redirect_to', url: '/dashboard/groups'
   else
     graphql presigned_url = 'photos/presign' | dig: 'presigned'
