--- a/app/views/partials/theme/simple/groups/card.liquid
+++ b/app/views/partials/theme/simple/groups/card.liquid
@@ -1,12 +1,13 @@
-{% function_rc group_url = 'link_to', path: '/groups/show/', item: group %}
 <div class="p-4 md:w-1/3">
   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden bg-white">
-    <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="{{ group.main_photo.photo.versions.small | default: 'https://dummyimage.com/720x400' }}" alt="blog">
+    <a href="{% render 'link_to', group: group %}">
+      <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="{{ group.main_photo.photo.versions.small | default: 'https://dummyimage.com/720x400' }}" alt="blog">
+    </a>
 
     <div class="p-6">
       <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">GROUP</h2>
       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">
-        <a href="{{group_url}}">
+        <a href="{% render 'link_to', group: group %}">
           {{ group.name }}
         </a>
       </h1>
