--- a/app/views/partials/theme/simple/home/card.liquid
+++ b/app/views/partials/theme/simple/home/card.liquid
@@ -1,11 +1,11 @@
 <div class="w-full px-0 mb-8 md:p-4 lg:w-1/3 md:w-1/2 card">
   {% if object.photo %}
   <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ object.url }}">
-    <img alt="{{ object.name }}" class="block object-cover object-center w-full h-full" src="{{ object.photo.url.versions.small }}">
+    <img alt="{{ object.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ object.photo.url.versions.small }}">
   </a>
   {% elsif target.photo %}
   <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ target.url }}">
-    <img alt="{{ target.name }}" class="block object-cover object-center w-full h-full" src="{{ target.photo.url.versions.small }}">
+    <img alt="{{ target.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ target.photo.url.versions.small }}">
   </a>
   {% endif %}
 
