--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -1,7 +1,7 @@
-<footer class=" ">
+<footer class="border-t border-gray-300">
   <div class="container flex flex-col items-center py-8 mx-auto sm:flex-row">
     <div class="flex items-center justify-center font-medium md:justify-start">
-      <span class="text-xl">MVP Marketplace</span>
+      <span class="text-xl">{{ 'app.title' | t }}</span>
     </div>
     <p class="mt-4 text-sm  sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0">© 2020 platformOS —
       <a href="https://twitter.com/platformos" class="ml-1 " rel="noopener noreferrer" target="_blank">@platformos</a>
