--- a/app/views/partials/theme/simple/home/card.liquid
+++ b/app/views/partials/theme/simple/home/card.liquid
@@ -1,35 +1,37 @@
-<div class="w-full px-0 mb-8 md:p-4 lg:w-1/3 md:w-1/2 card">
+<div class="w-full px-0 mx-4 mb-8 lg:w-1/4 md:w-1/3 card bg-white rounded overflow-hidden">
   {% if object.photo %}
-  <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ object.url }}">
+  <a class="relative block h-64 overflow-hidden shadow-sm" href="{{ object.url }}">
     <img alt="{{ object.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ object.photo.url.versions.small }}">
   </a>
   {% elsif target.photo %}
-  <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ target.url }}">
+  <a class="relative block h-64 overflow-hidden shadow-sm" href="{{ target.url }}">
     <img alt="{{ target.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ target.photo.url.versions.small }}">
   </a>
   {% endif %}
 
-  <header class="text-gray-600 text-xs">
-    {% print type | t: scope: 'app.home.feeds.header' %}
-  </header>
+  <div class="md:p-4">
+    <header class="text-gray-600 text-xs">
+      {% print type | t: scope: 'app.home.feeds.header' %}
+    </header>
 
-  <div class="mt-4">
-    <h2 class="text-lg font-medium text-gray-900 ">
-      <a href="{% render 'link_to', comment: target %}">{{ item.name }}</a>
-    </h2>
+    <div class="mt-4">
+      <h2 class="text-lg font-medium text-gray-900 ">
+        <a href="{% render 'link_to', comment: target %}">{{ item.name }}</a>
+      </h2>
 
-    <div class="justify-between text-xs">
-      <div class="font-semibold text-medium">{% print object.name %}</div>
+      <div class="justify-between text-xs">
+        <div class="font-semibold text-medium">{% print object.name %}</div>
 
-      {% echo object.body | default: object.description | default: object.bio %}
-    </div>
-    <div class="flex justify-between">
-      <p class="mt-1">
-      </p>
+        {% echo object.body | default: object.description | default: object.bio %}
+      </div>
+      <div class="flex justify-between">
+        <p class="mt-1">
+        </p>
 
-      <h3 class="mb-1 text-xs">
-        {% render 'theme/simple/business_card', user: actor, current_user: current_user %}
-      </h3>
+        <h3 class="mb-1 text-xs">
+          {% render 'theme/simple/business_card', user: actor, current_user: current_user %}
+        </h3>
+      </div>
     </div>
   </div>
 </div>
