--- a/app/views/partials/theme/simple/layout/scripts.liquid
+++ b/app/views/partials/theme/simple/layout/scripts.liquid
@@ -2,5 +2,7 @@
 
 <script src="{{ 'js/app.js' | asset_url }}"></script>
 
+
+<script src="{{ 'modules/chat/js/notifications.js' | asset_url }}"></script>
 {% comment %}TODO: rewrite navigation dropdown in vanila js{% endcomment %}
 <script src="{{ 'vendor/js/alpine.min.js' | asset_url }}"></script>
